[tool.poetry]
name = "py-irt"
version = "0.6.6"
readme = "README.md"
homepage = "https://github.com/nd-ball/py-irt/"
description = "Bayesian IRT models in Python"
authors = ["John P. Lalor <john.lalor@nd.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.24.4"
pandas = "^2.0.3"
pyro-ppl = "^1.8.6"
rich = "^13.7.0"
scipy = "^1.6.3"
typer = ">=0.9.0,<0.15.0"
pydantic = "^2.5.3"
scikit-learn = "^1.3.2"
toml = "^0.10.2"
ordered-set = "^4.1.0"
torch = "^2.2.0"
[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
black = "^24.3.0"
isort = "^5.13.2"
ipython = "^8.13.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
graphviz = "^0.20.1"

[tool.black]
line-length = 100

[tool.isort]
known_first_party = "py_irt"
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"py-irt" = 'py_irt.cli:app'
